--- a/AnotherConsole/AnotherConsole.csproj
+++ b/AnotherConsole/AnotherConsole.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1B48C65C-8A7A-419C-AD11-893324FFA5E8}</ProjectGuid>
+    <ProjectGuid>{B28F9155-9DC7-4E95-9326-814CCD652279}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DimmentionMaker</RootNamespace>
-    <AssemblyName>DimmentionMaker</AssemblyName>
+    <RootNamespace>AnotherConsole</RootNamespace>
+    <AssemblyName>AnotherConsole</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,8 +33,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LibTessDotNet, Version=2.0.0.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\LibTessDotNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,6 +58,24 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tekla.Common.Geometry, Version=4.6.0.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Common.Geometry.Algorithms, Version=4.6.2.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.Algorithms.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Common.Geometry.Primitives, Version=4.5.0.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Common.Geometry.Shapes, Version=4.6.2.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.Shapes.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Common.Geometry.Shapes.Tools, Version=4.6.2.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.Shapes.Tools.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Common.Geometry.Topology, Version=4.6.0.0, Culture=neutral, PublicKeyToken=93c0f7e4f1ca9619, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Common.Geometry.4.6.2\lib\net\Tekla.Common.Geometry.Topology.dll</HintPath>
+    </Reference>
     <Reference Include="Tekla.Structures, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\Tekla.Structures.2023.0.1\lib\net40\Tekla.Structures.dll</HintPath>
     </Reference>
@@ -63,46 +97,19 @@
     <Reference Include="Tekla.Structures.Plugins, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\Tekla.Structures.Plugins.2023.0.1\lib\net40\Tekla.Structures.Plugins.dll</HintPath>
     </Reference>
+    <Reference Include="Tekla.Technology.Serialization, Version=4.1.0.0, Culture=neutral, PublicKeyToken=a70cba4ef557ee03, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Technology.Serialization.4.1.1\lib\netstandard2.0\Tekla.Technology.Serialization.dll</HintPath>
+    </Reference>
+    <Reference Include="Trimble.Remoting, Version=1.0.0.0, Culture=neutral, PublicKeyToken=a70cba4ef557ee03, processorArchitecture=MSIL">
+      <HintPath>..\packages\Trimble.Remoting.1.0.2\lib\netstandard2.0\Trimble.Remoting.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\AddChamferMarkCommand.cs" />
-    <Compile Include="Commands\AddDimmensionCommand.cs" />
-    <Compile Include="Commands\AddOverallDimCommand.cs" />
-    <Compile Include="Commands\AddOverallBottomDimCommand.cs" />
-    <Compile Include="Commands\ClearDimmensionsAndTextCommand.cs" />
-    <Compile Include="Commands\ClearGeometrySectionsCommand.cs" />
-    <Compile Include="Commands\GeometrySectionCreationCommand.cs" />
-    <Compile Include="Commands\PrintValueCommand.cs" />
-    <Compile Include="Commands\SetCoordinateSystemCommand.cs" />
-    <Compile Include="Creators\GeoSectionCreator.cs" />
-    <Compile Include="Providers\ChamferCmdProvider.cs" />
-    <Compile Include="Providers\EmbedDimmensionCmdProvider.cs" />
-    <Compile Include="Interfaces\IGeometryCreator.cs" />
-    <Compile Include="Managers\FrontViewAnotationManager.cs" />
-    <Compile Include="Commands\ResetCoordinateSystemCommand.cs" />
-    <Compile Include="Creators\OpeningCommandCreator.cs" />
-    <Compile Include="Interfaces\ICommandCreator.cs" />
-    <Compile Include="Interfaces\IDrawingCommand.cs" />
-    <Compile Include="Interfaces\IAnotationManager.cs" />
-    <Compile Include="Providers\GeoSectionCmdProvider.cs" />
-    <Compile Include="Managers\GeometryDimensionManager.cs" />
-    <Compile Include="Managers\TieBeamDrawingManager.cs" />
-    <Compile Include="Interfaces\IDrawingManager.cs" />
-    <Compile Include="Models\AttributeProvider.cs" />
-    <Compile Include="Models\CommandQueue.cs" />
-    <Compile Include="Models\CommandExecutor.cs" />
-    <Compile Include="Models\Dirrections.cs" />
-    <Compile Include="Models\FileGenerator.cs" />
-    <Compile Include="Interfaces\ICommandQueue.cs" />
-    <Compile Include="Models\Utils.cs" />
-    <Compile Include="Models\CreationType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\GeoSectionTypeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="Commands\CommitDrawingChangesCommand.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -124,11 +131,14 @@
     <Content Include="Resources\prtyp_tree_9.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DimmentionMaker\DimmentionMaker.csproj">
+      <Project>{1B48C65C-8A7A-419C-AD11-893324FFA5E8}</Project>
+      <Name>DimmentionMaker</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ExtensionMethods\ExtensionMethods.csproj">
       <Project>{b94799fc-ff52-4b67-9826-37b82cdadd16}</Project>
       <Name>ExtensionMethods</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
